--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,5 +11,15 @@ pipeline {
                 bat 'mvn test'
             }
         }
+        stage ('Sonar Analysis') {
+            environment {
+                scannerHome = tool 'SONAR_SCANNER'
+            }
+            steps {
+                withSonarQubeEnv('SONAR_LOCAL') {
+                    bat "${scannerHome}/bin/sonar-scanner -e -Dsonar.projectKey=DeployBack -Dsonar.host.url=http://localhost:9000 -Dsonar.login=9b0e5714a0f15dbe02278fdf729b9d7705ec7fea -Dsonar.java. inaries=target -Dsonar.coverage.exclusions=**/.mvn/**, **/src/test/**, **/model/**, **Application.java"
+                }
+            }
+        }
     }
 }
