--- a/JenkinsFile
+++ b/JenkinsFile
@@ -36,8 +36,10 @@ pipeline {
         }
         stage ('API Test') {
             steps {
-                git branch: 'main', url: 'https://github.com/joao-ulisses/tasks-api-test'
-                bat 'mvn test'
+                dir('api=test') {
+                    git branch: 'main', url: 'https://github.com/joao-ulisses/tasks-api-test'
+                    bat 'mvn test'
+                }
             }
         }
     }
