--- a/JenkinsFile
+++ b/JenkinsFile
@@ -36,10 +36,20 @@ pipeline {
         }
         stage ('API Test') {
             steps {
-                dir('api=test') {
+                dir('api-test') {
                     git branch: 'main', url: 'https://github.com/joao-ulisses/tasks-api-test'
                     bat 'mvn test'
                 }
+            }
+        }
+        stage ('Deply Frontend') {
+            steps {
+                dir('frontend') {
+                    git branch: 'master', url: 'https://github.com/joao-ulisses/tasks-frontend'
+                    bat 'mvn clean package'
+                    deploy adapters: [tomcat8(credentialsId: 'TomcatLogin', path: '', url: 'http://localhost:8001/')], contextPath: 'tasks-frontend', war: 'target/tasks-frontend.war'
+                }
+
             }
         }
     }
