--- a/JenkinsFile
+++ b/JenkinsFile
@@ -47,9 +47,17 @@ pipeline {
                 dir('frontend') {
                     git branch: 'master', url: 'https://github.com/joao-ulisses/tasks-frontend'
                     bat 'mvn clean package'
-                    deploy adapters: [tomcat8(credentialsId: 'TomcatLogin', path: '', url: 'http://localhost:8001/')], contextPath: 'tasks-frontend', war: 'target/tasks-frontend.war'
+                    deploy adapters: [tomcat8(credentialsId: 'TomcatLogin', path: '', url: 'http://localhost:8001/')], contextPath: 'tasks-frontend', war: 'target/tasks.war'
                 }
 
+            }
+        }
+        stage ('Functional Test') {
+            steps {
+                dir('functional-test') {
+                    git branch: 'main', url: 'https://github.com/joao-ulisses/tasks-functional-tests'
+                    bat 'mvn test'
+                }
             }
         }
     }
