docker compose in jenkinsfile

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -60,5 +60,11 @@ pipeline {
                 }
             }
         }
+        stage ("Deply Prod") {
+            steps {
+                bat 'docker-compose build'
+                bat 'docker-compose up -d'
+            }
+        }
     }
 }
